Implementacao swagger