@@ -4,12 +4,14 @@ import com.tds.desafio.model.UrlModel;
 import com.tds.desafio.repository.UrlRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
 import java.time.LocalDateTime;
 import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
@@ -60,7 +62,6 @@ class UrlServiceTest {
     void getOriginalUrl_MustReturnOriginalUrlAndIncreaseViews() {
         String shortUrl = "exa.com";
         String originalUrl = "https://example.com";
-
         UrlModel urlModel = new UrlModel();
         urlModel.setUrl(originalUrl);
         urlModel.setShortUrl(shortUrl);
@@ -68,11 +69,14 @@ class UrlServiceTest {
         urlModel.setCreateDate(LocalDateTime.now().minusDays(3));
 
         when(repository.findByShortUrl(shortUrl)).thenReturn(urlModel);
+        when(repository.save(any(UrlModel.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
         String actualOriginalUrl = service.getOriginalUrl(shortUrl);
         assertEquals(originalUrl, actualOriginalUrl);
-        assertEquals(6, urlModel.getTotalView());
-        verify(repository).save(urlModel);
+        ArgumentCaptor<UrlModel> captor = ArgumentCaptor.forClass(UrlModel.class);
+        verify(repository).save(captor.capture());
+        UrlModel savedUrl = captor.getValue();
+        assertEquals(6, savedUrl.getTotalView());
     }
 
     @Test
@@ -96,12 +100,12 @@ class UrlServiceTest {
 
         when(repository.findByShortUrl(shortUrl)).thenReturn(urlModel);
 
-        var result = service.getUrlsViewsStatistics(Arrays.asList(shortUrl));
+        var result = service.getUrlsViewsStatistics(List.of(shortUrl));
 
         assertEquals(1, result.size());
-        assertEquals(url, result.get(0).getUrl());
-        assertEquals(10, result.get(0).getTotalView());
-        assertTrue(result.get(0).getDailyView() > 2);
+        assertEquals(url, result.getFirst().getUrl());
+        assertEquals(10, result.getFirst().getTotalView());
+        assertTrue(result.getFirst().getDailyView() > 2);
     }
 
     @Test
@@ -110,11 +114,11 @@ class UrlServiceTest {
 
         when(repository.findByShortUrl(shortUrl)).thenReturn(null);
 
-        var result = service.getUrlsViewsStatistics(Arrays.asList(shortUrl));
+        var result = service.getUrlsViewsStatistics(List.of(shortUrl));
 
         assertEquals(1, result.size());
-        assertEquals("Url not found:" + shortUrl, result.get(0).getUrl());
-        assertEquals(0, result.get(0).getTotalView());
-        assertEquals(0.0, result.get(0).getDailyView());
+        assertEquals("Url not found:" + shortUrl, result.getFirst().getUrl());
+        assertEquals(0, result.getFirst().getTotalView());
+        assertEquals(0.0, result.getFirst().getDailyView());
     }
 }
